--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 	<!--CSS STYLESHEET -->
-	<link rel="stylesheet" href="reset.css">
+	<link rel="stylesheet" href="assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 	<!-- Google Fonts -->
@@ -16,13 +16,14 @@
 </head>
 <body>
 <div id="game">
+
 <h1> The Psychic Game </h1>
 <h2> Guess what letter I'm thinking of:
-<p> Wins: </p>
+<p> Wins: <span id="winTally"></span>,</p>
 <p> Loses: </p>
-
 <p> Key pressed: 
 	<span id="kp1"></span>,
+	<span id="kp2"></span>,
 	
 	</p>
 <div>
