--- a/index.html
+++ b/index.html
@@ -15,21 +15,23 @@
 	<title></title>
 </head>
 <body>
-<div id="game">
+	<section>
+		<h6> Are you Ready? </h6>
+		<h1>(Press any key to Begin!)</h1>
 
-<h1> The Psychic Game </h1>
-<h2> Guess what letter I'm thinking of:
-<p> Wins: <span id="winTally"></span>,</p>
-<p> Loses: </p>
-<p> Key pressed: 
-	<span id="kp1"></span>,
-	<span id="kp2"></span>,
-	
-	</p>
-<div>
+	</section>
+	<div id="game">
+	<!--   
+	<h2> Guess what letter I'm thinking of:
+	<p> Wins: <span id="winTally"></span></p>
+	<p> Loses: </p>
+	<p> Key pressed: 
+		<span id="kp1"></span>
+	</p> -->
+	<div>
 
-<script src="assets/javascript/game.js">
+	<script src="assets/javascript/game.js">
 	
-</script>
+	</script>
 </body>
 </html>
