--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
 
 	<!-- Google Fonts -->
 	<link href='https://fonts.googleapis.com/css?family=Lakki+Reddy' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
+	
 	<link href='https://fonts.googleapis.com/css?family=Chewy' rel='stylesheet' type='text/css'>
 
 	<title></title>
 </head>
 <body>
 	<section>
-		<h6> Are you Ready? </h6>
-		<h1>(Press any key to Begin!)</h1>
+		<h1 id="ready"> Are you ready for the </h1>
+		<h6> PSYCHIC GAME <h6>
+		<h1> (Press any key to Begin!) </h1>
 
 	</section>
 	<div id="game">
